--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -34,14 +34,14 @@ jobs:
       env:
         REPO_DESC: ${{ github.event.repository.description }}
     # Uncomment to use Python:
-    # - name: Set up Python 3.13
-    #   uses: actions/setup-python@v5
-    #   with:
-    #     python-version: "3.13"
-    #     cache: "pip"
-    # - name: Install dependencies
-    #   run: |
-    #     pip install -r requirements.txt
+    - name: Set up Python 3.13
+      uses: actions/setup-python@v5
+      with:
+        python-version: "3.13"
+        cache: "pip"
+    - name: Install dependencies
+      run: |
+        pip install beautifulsoup4 # do pip install -r requirements.txt if there are more substantial 
     # Uncomment to use Playwright via shot-scraper (put shot-scraper in requirements.txt):
     # - name: Cache Playwright browsers
     #   uses: actions/cache@v4
